--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,18 +1,3 @@
-/ new.html.haml
-/ “<h1>New Project</h1>
-/ <%= form_for(@project) do |f| %>
-/   <p>
-/     <%= f.label :name %><br>
-/     <%= f.text_field :name %>
-/   </p>”
-
-/ <p>
-/   <%= f.label :description %><br>
-/   <%= f.text_field :description %>
-/ </p>
-
-/ <%= f.submit %>
-/ <% end %>”
 %h1 New Project
 =form_for @project do |f|
   %p
@@ -24,5 +9,5 @@
     =f.label :description
     %br
     =f.text_field :description
-  = f.submit "Create Project"
+  = f.submit
 
