projects can now be updated

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,5 +1,6 @@
 / show.html.haml
 = title(@project.name, "Projects")
+= link_to "Edit Project", edit_project_path(@project)
 %h1
   = @project.name
 %p
