--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,19 +1,4 @@
-=form_for(@project) do |f|
-  - if @project.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@project.errors.count, "error")
-        prohibited this project from being saved:
-
-      %ul
-        - @project.errors.full_messages.each do |msg|
-          %li= msg
-  %p
-    = f.label :name
-    = f.text_field :name
-  %p
-    = f.label :description
-    = f.text_field :description
-
-  = f.submit
-
+=simple_form_for(@project) do |f|
+  = f.input :name
+  = f.input :description
+  = f.button :submit, class: "btn-primary"
