--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,5 +1,11 @@
-%h1 Projects
-= link_to "New Project", new_project_path
+.header
+  %h1 
+    Projects
+    %ul.actions
+      %li= link_to " New Project", new_project_path, class: "new"
+
+
+
 #projects
   - @projects.each do |project|
     %h3= link_to project.name, project
