finish styling of projects index, ends chapter 4 of RIA

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "projects";
+@import "responsive";
 
 header {
   @extend .page-header;
@@ -61,4 +62,8 @@ a.delete {
 
 .alert-alert {
   @extend .alert-danger;
+}
+
+body {
+  padding-top: 60px;
 }
