implement creating tickets for projects

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -8,3 +8,9 @@
 
 %p
   = @project.description
+
+.header
+  %h2 
+    Tickets
+    %ul.actions
+      %li= link_to " New Ticket", new_project_ticket_path(@project), class: "new"
