--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -6,5 +6,7 @@
 
   %header
     %h2=@ticket.name
+    %ul.actions
+      %li= link_to "Edit Ticket", [:edit, @project, @ticket], class: "edit"
 
   =simple_format(@ticket.description)
