--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -8,5 +8,6 @@
     %h2=@ticket.name
     %ul.actions
       %li= link_to "Edit Ticket", [:edit, @project, @ticket], class: "edit"
+      %li= link_to "Delete Ticket", [@project, @ticket], method: :delete, data: {confirm: "Are you sure you want to delete this ticket?"}, class: "delete"
 
   =simple_format(@ticket.description)
