adds devise sign up feature

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,6 +27,10 @@
               %li.active= link_to "Home", root_path
             -else
               %li= link_to "Home", root_path
+            -if current_page?("/users/sign_up")
+              %li.active= link_to "Sign up", new_user_registration_path
+            -else
+              %li= link_to "Sign up", new_user_registration_path
 
     .container
       - flash.each do |key, message|
