--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,10 +27,23 @@
               %li.active= link_to "Home", root_path
             -else
               %li= link_to "Home", root_path
-            -if current_page?("/users/sign_up")
-              %li.active= link_to "Sign up", new_user_registration_path
-            -else
-              %li= link_to "Sign up", new_user_registration_path
+            -unless user_signed_in?
+              -if current_page?("/users/sign_up")
+                %li.active= link_to "Sign up", new_user_registration_path
+              -else
+                %li= link_to "Sign up", new_user_registration_path
+
+              -if current_page?("/users/sign_in")
+                %li.active= link_to "Sign up", new_user_registration_path
+              -else
+                %li= link_to "Sign in", new_user_session_path
+
+          -if user_signed_in?
+            .navbar-right
+              %p.navbar-text 
+                Signed in as 
+                =succeed(".") do
+                  =current_user.email
 
     .container
       - flash.each do |key, message|
