--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,6 +44,8 @@
                 Signed in as 
                 =succeed(".") do
                   =current_user.email
+              %ul.nav.navbar-nav
+                %li= link_to "Sign out", destroy_user_session_path, method: :delete
 
     .container
       - flash.each do |key, message|
