--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -2,7 +2,7 @@
   %h1 
     Projects
     %ul.actions
-      %li= link_to " New Project", new_project_path, class: "new"
+      %li= link_to " New Project", new_admin_project_path, class: "new"
 
 #projects
   - @projects.each do |project|
