--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -4,7 +4,7 @@
 
   %ul.actions
     %li= link_to "Edit Project", edit_project_path(@project), class: "edit"
-    %li= link_to "Delete Project", project_path(@project), method: :delete, data:{confirm: "Are you sure you want to delete this project?"}, class: "delete"
+    %li= link_to "Delete Project", admin_project_path(@project), method: :delete, data:{confirm: "Are you sure you want to delete this project?"}, class: "delete"
 
 %p
   = @project.description
