only admins can see the links to create and delete projects

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,8 +1,9 @@
 .header
   %h1 
     Projects
-    %ul.actions
-      %li= link_to " New Project", new_admin_project_path, class: "new"
+    -admins_only do
+      %ul.actions
+        %li= link_to " New Project", new_admin_project_path, class: "new"
 
 #projects
   - @projects.each do |project|
