add the ability to create users through the admin backend

--- a/app/views/admin/application/index.html.haml
+++ b/app/views/admin/application/index.html.haml
@@ -9,5 +9,4 @@
   .col-md-3
     %h2 Admin Links
     %ul.nav.nav-stacked
-      %li
-        Links will go here. Soon.
+      %li= link_to "Users", admin_users_path
